# SY31_Projet

./: README.md  package.xml  requirements.txt  setup.py
config/: detection_params.yaml
launch/: detection.launch.py
objets/: metadata.yaml
scripts/: offline_analysis.py
sy31_detection/: __init__.py  clusterer.py  color_detector.py  detect.py  detection_node.py  intensity_filter.py  lidar_analyzer.py  object_classifier.py  performance_metrics.py  shape_results.py  shaper_bbox.py  shaper_cylinder.py  shaper_polyline.py  transformer.py
test/: test_classifier.py
